<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    tools:context=".ForgetpasswordActivity">

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="#1B1413"
            android:textSize="34sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:text="@string/a_password_reset_link_will_be_sent_to_your_email_id" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edittext_bg"
            android:ems="10"
            android:hint="@string/enter_your_email_id"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:paddingStart="20dp"
            android:textSize="24sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/red"
            android:padding="14dp"
            android:text="@string/send_email"
            android:textSize="20sp"
            app:cornerRadius="90dp" />


    </LinearLayout>

</RelativeLayout>