<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/sign_up"
            android:textColor="#1B1413"
            android:textSize="34sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_bg"
            android:ems="10"
            android:hint="@string/enter_your_name"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:paddingStart="20dp"
            android:layout_marginBottom="20dp"
            android:textSize="24sp"
            android:autofillHints="" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_bg"
            android:ems="10"
            android:hint="@string/enter_your_email_id"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:paddingStart="20dp"
            android:layout_marginBottom="20dp"
            android:textSize="24sp"
            android:autofillHints="" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_bg"
            android:ems="10"
            android:hint="@string/create_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:paddingStart="20dp"
            android:layout_marginBottom="20dp"
            android:textSize="24sp"
            android:autofillHints="" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_bg"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:paddingStart="20dp"
            android:layout_marginBottom="3dp"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:layout_gravity="right"
            android:gravity="right"
            android:textStyle="bold"
            android:layout_marginRight="5dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/red"
            android:padding="10dp"
            android:text="@string/sign_up"
            android:textSize="24sp"
            app:cornerRadius="90dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:layout_width="130dp"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:background="@color/black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:layout_gravity="center_vertical"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:textSize="18sp"/>
            <View
                android:layout_width="130dp"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:background="@color/black"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_using"
            android:layout_gravity="center"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:src="@drawable/google_logo"/>
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:src="@drawable/facebook_logo"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SignIn"
                android:textColor="@color/red"
                android:textStyle="bold"/>

        </LinearLayout>




    </LinearLayout>

</LinearLayout>